# DavinciMCP

./: .env.example  .env.sample  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  command_pattern.py  media_analysis.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  resolve_control.py  setup.py  test_resolve_control.py
.github/workflows/: ci.yml
davincimcp/: __init__.py  cli.py
davincimcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
davincimcp/commands/: __init__.py  command_base.py  command_registry.py  editing_commands.py
davincimcp/core/: __init__.py  gemini_handler.py  mcp_handler.py  resolve_controller.py
davincimcp/core/mcp/: __init__.py  mcp_client.py  mcp_handler.py
davincimcp/core/media/: media_control_handler.py
davincimcp/interactive/: __init__.py  prompt.py
davincimcp/media/: __init__.py  analyzer.py
davincimcp/ui/: __init__.py  app.py  command_panel.py  main_window.py  media_browser.py  timeline_view.py
davincimcp/utils/: __init__.py  config.py  exceptions.py
docs/source/: conf.py  index.rst
examples/: ai_assisted_editing.py  basic_editing.py
examples/mcp/: client_example.py  resolve_server.py
tests/: conftest.py  test_command_pattern.py  test_config.py  test_gemini_handler.py
tests/core/mcp/: test_mcp_client.py  test_mcp_handler.py
